--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">Serenity</a></h1>
+        <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">About</a></li>
-              <li><a href="team.html">Team</a></li>
+              <li><a href="about.html">¿Que hacemos?</a></li>
+              <li><a href="team.html">¿Quienes trabajamos?</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -65,13 +65,12 @@
               </li>
             </ul>
           </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="services.html">Noticias</a></li>
+          <li><a href="pricing.html">Adopta a un pingüino</a></li>
+          <li><a href="portfolio.html">Tienda</a></li>
+          <li><a href="contact.html">Contacto</a></li>
 
-          <li><a class="getstarted" href="about.html">Get Started</a></li>
+          <li><a class="getstarted" href="about.html">Hazte socio</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -82,9 +81,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-up">
-      <h1>Welcome to Serenity</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h1>SphenAuk</h1>
+      <h2>Unamonos para combatir la extinción de los pinüinos</h2>
+      <a href="#about" class="btn-get-started scrollto">Hazte socio</a>
     </div>
   </section><!-- End Hero -->
 
@@ -101,16 +100,16 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box py-5">
                   <i class="bi bi-emoji-smile"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="65" class="purecounter">0</span>
-                  <p>Happy Clients</p>
+                  <span data-purecounter-start="0" data-purecounter-end="5000" class="purecounter">0</span>
+                  <p>Pingüinos salvados</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box py-5">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="85" class="purecounter">0</span>
-                  <p>Projects</p>
+                  <span data-purecounter-start="0" data-purecounter-end="20" class="purecounter">0</span>
+                  <p>Proyectos activos</p>
                 </div>
               </div>
 
@@ -118,7 +117,7 @@
                 <div class="count-box pb-5 pt-0 pt-lg-5">
                   <i class="bi bi-clock"></i>
                   <span data-purecounter-start="0" data-purecounter-end="27" class="purecounter">0</span>
-                  <p>Years of experience</p>
+                  <p>Años de actividad</p>
                 </div>
               </div>
 
@@ -126,7 +125,7 @@
                 <div class="count-box pb-5 pt-0 pt-lg-5">
                   <i class="bi bi-award"></i>
                   <span data-purecounter-start="0" data-purecounter-end="22" class="purecounter">0</span>
-                  <p>Awards</p>
+                  <p>Premios</p>
                 </div>
               </div>
 
