--- a/team.html
+++ b/team.html
@@ -23,7 +23,13 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./assets/css/nosaltres.css" rel="styleshet">
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -83,18 +89,22 @@
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
-      <div class="breadcrumb-hero">
+      <div class="icono">
+       <p class="bg-info text-white">Apadrina a un pingüino <i class="fas fa-thumbs-up"></i></p>
+      </div>
+      <div class="bg-info text-white">
         <div class="container">
-          <div class="breadcrumb-hero">
-            <h2>Team</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+          <div class="bg-info text-white">
+            <h2>NOSOTROS</h2>
+            <p>Nuestro compromiso con distintas causas nos lleva a activar diferentes campañas de concienciación social para dar visibilidad a problemas que creemos que necesitan una solución urgente. De esta manera conseguimos llegar a muchas más personas y utilizando todos los canales a nuestro alcance para comunicar los beneficios del vínculo entre las personas y los animales (En este caso los pingüinos).  </p>
           </div>
+          
         </div>
       </div>
       <div class="container">
         <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Team</li>
+          <li><a href="index.html">Inicio</a></li>
+          <li>Nuestro equipo</li>
         </ol>
       </div>
     </section><!-- End Breadcrumbs -->
@@ -104,11 +114,10 @@
       <div class="container">
 
         <div class="row">
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="./imagenes/1094121716_0_110_3071_1837_1920x0_80_0_0_3cdbe22e8e6a688eeb0670e87755a55c (1).jpg" class="img-fluid" alt="" width="700" height="600" >
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -117,9 +126,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Animi est delectus alias quam repellendus nihil nobis dolor. Est sapiente occaecati et dolore. Omnis aut ut nesciunt explicabo qui. Eius nam deleniti ut omnis repudiandae perferendis qui. Neque non quidem sit sed pariatur quia modi ea occaecati. Incidunt ea non est corporis in.</p>
+                <h4>kim jong un</h4>
+                <span>Dictador por pasión</span>
+                <p>Kim asume oficialmente la Comandancia Suprema del Ejército Popular de Corea del Norte, después del funeral estatal de su padre acaecido el 28 de diciembre de 2011, tambien es amante de los pingüinos</p>
               </div>
             </div>
           </div>
@@ -127,7 +136,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="./imagenes/descarga.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -136,9 +145,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aspernatur iste esse aliquam enim et corporis. Molestiae voluptatem aut eligendi quis aut. Libero vel amet voluptatem eos rerum non doloremque. Dolores eum non.</p>
+                <h4>Bill Gates</h4>
+                <span>Millonario</span>
+                <p>William Henry Gates III (Seattle, Washington; 28 de octubre de 1955), mejor conocido como Bill Gates (AFI: [bil gejts]), es un empresario, informático y filántropo estadounidense, conocido por haber creado y fundado junto con Paul Allen, la empresa Microsoft. De igual forma es conocido por su gran fetiche hacia los pingüinos</p>
               </div>
             </div>
           </div>
@@ -146,7 +155,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="./imagenes/Lebron-James.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -155,9 +164,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Ut enim possimus nihil cupiditate beatae. Veniam facere quae non qui necessitatibus rerum eos vero. Maxime sit sunt quo dolor autem est qui quaerat aliquid. Tenetur possimus qui enim.</p>
+                <h4>Lebron James</h4>
+                <span>Futbolista</span>
+                <p>LeBron Raymone James Sr. (Akron, Ohio, 30 de diciembre de 1984) es un jugador de baloncesto estadounidense que actualmente pertenece a la plantilla de Los Angeles Lakers de la NBA. Con 2,06 metros de estatura, su posición es la de alero, pero su talento, versatilidad y poderío físico le permiten jugar tanto de base como de ala-pívot.1​ James es considerado como uno de los mejores jugadores de baloncesto del mundo y de la historia y gran amante de los pingüinos</p>
               </div>
             </div>
           </div>
@@ -165,7 +174,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="./imagenes/kardash.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -174,9 +183,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Sint qui cupiditate. Asperiores fugit impedit aspernatur et mollitia. Molestiae qui placeat labore assumenda id qui nesciunt quo reprehenderit. Rem dolores similique quis soluta culpa enim quia ratione ea.</p>
+                <h4>Kim kardashian</h4>
+                <span>Es mujer</span>
+                <p>Kimberly Noel Kardashian West (Los Ángeles, 21 de octubre de 1980), conocida como Kim Kardashian, es una socialité, modelo, empresaria y personaje público estadounidense. Su plato favorito son los pingüinos</p>
               </div>
             </div>
           </div>
@@ -184,7 +193,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
+                <img src="./imagenes/chayane.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -193,9 +202,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Niall Katz</h4>
-                <span>Marketing</span>
-                <p>Aut ex esse explicabo quia harum ea accusamus excepturi. Temporibus at quia quisquam veritatis impedit. Porro laborum voluptatum sed necessitatibus a saepe. Deserunt laborum quasi consequatur voluptatum iusto sint qui fuga vel. Enim eveniet sed quibusdam rerum in. Non dicta architecto consequatur quo praesentium nesciunt.</p>
+                <h4>Chayanne</h4>
+                <span>Es tu padre</span>
+                <p>Elmer Figueroa Arce (Río Piedras, Puerto Rico; 28 de junio de 1968), conocido como Chayanne, es un cantante, compositor, bailarín y actor puertorriqueño. Ha vendido más de 50 millones de álbumes en todo el mundo. Gran parte de sus canciones han sido dedicada a los pingüinos</p>
               </div>
             </div>
           </div>
@@ -203,7 +212,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
+                <img src="./imagenes/trump.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -212,9 +221,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Demi Lewis</h4>
-                <span>Financing</span>
-                <p>Amet labore numquam corrupti est. Nostrum amet voluptas consectetur dolor voluptatem architecto distinctio consequuntur eligendi. Quam impedit enim aut nesciunt aut dicta quam exercitationem. Reprehenderit exercitationem magnam. Ullam similique ut voluptas totam nobis porro accusamus nulla omnis.</p>
+                <h4>Donal Trump</h4>
+                <span>Expersonaje</span>
+                <p>Donald John Trump (pronunciación en inglés: /ˈdɒnəld d͡ʒɒn trʌmp/ ( escuchar); Nueva York, 14 de junio de 1946) es un empresario, director ejecutivo, inversor en bienes raíces, personalidad televisiva y político estadounidense que ejerció como el 45.º presidente de los Estados Unidos de América desde el 20 de enero de 2017. Ahora que no es presidente dsifruta debatiendo con pingüinos, para el son igual que as personas.</p>
               </div>
             </div>
           </div>
