--- a/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
+++ b/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
@@ -425,9 +425,9 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h4>Contacta con nosotros</h4>
                         <p>
-                            A108 Adam Street <br>
-                            New York, NY 535022<br>
-                            United States <br>
+                            Passeig de Devesa,<br>
+                            34, 17001 Girona<br>
+                            España <br>
                             <strong>Telefono:</strong> +34 972 555 555<br>
                             <strong>Email:</strong> SphenAuk@gmail.com<br>
                         </p>
