--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pricing - Serenity Bootstrap Template</title>
+  <title>SphenAuk - Adopta un pingüino</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,36 +42,26 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">Serenity</a></h1>
+        <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">About</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
+              <li><a href="about.html">¿Que hacemos?</a></li>
+              <li><a href="team.html">¿Quienes trabajamos?</a></li>
             </ul>
           </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a class="active" href="pricing.html">Pricing</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="services.html">Noticias</a></li>
+          <li><a class="active" href="pricing.html">Adopta a un pingüino</a></li>
+          <li><a href="portfolio.html">Tienda</a></li>
+          <li><a href="contact.html">Contacto</a></li>
 
-          <li><a class="getstarted" href="about.html">Get Started</a></li>
+          <li><a class="getstarted" href="about.html">Hazte socio</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -86,15 +76,15 @@
       <div class="breadcrumb-hero">
         <div class="container">
           <div class="breadcrumb-hero">
-            <h2>Pricing</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+            <h2>Adopta a un pingüino</h2>
+            <p>Con sus donaciones, alimentaremos, salvaremos y daremos hogar a miles de pingüinos en peligro severo de extinción.</p>
           </div>
         </div>
       </div>
       <div class="container">
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Pricing</li>
+          <li>Adopta a un pingüino</li>
         </ol>
       </div>
     </section><!-- End Breadcrumbs -->
@@ -107,12 +97,12 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="box" data-aos="fade-up">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h3>Salva 1 pingüino</h3>
+              <h4><sup>€</sup>15<span> / mes</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
+                <li>Alimentamos</li>
+                <li>Damos hogar</li>
+                <li>Rescatamos</li>
                 <li class="na">Pharetra massa</li>
                 <li class="na">Massa ultricies mi</li>
               </ul>
