--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,8 @@
       <div class="breadcrumb-hero">
         <div class="container">
           <div class="breadcrumb-hero">
-            <h2>Contact</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+            <h2>Contacto</h2>
+            <p>Envianos cualquier duda o consulta a traves de este breve formulario.</p>
           </div>
         </div>
       </div>
