Sobrenosotros sin el navbar bueno

--- a/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
+++ b/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
@@ -52,9 +52,12 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="dropdown"><a href="#"><span>About</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
-                      </svg></a>
+                    <li class="dropdown"><a href="#"><span>About</span> <svg xmlns="http://www.w3.org/2000/svg"
+                                width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short"
+                                viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z" />
+                            </svg></a>
                         <ul>
                             <li><a class="active" href="about.html">About</a></li>
                             <li><a href="team.html">Team</a></li>
@@ -182,9 +185,10 @@
                 <div class="row">
 
                     <div class="col-lg-6 video-box align-self-baseline position-relative">
-                        <img src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\about2.jpg"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\about2.jpg"
                             class="img-fluid" alt="">
-                        <a href="https://www.youtube.com/watch?v=YjHeDz_jVSU&list=LL&index=1&t=21s" class="glightbox play-btn mb-4"></a>
+                        <a href="https://www.youtube.com/watch?v=YjHeDz_jVSU&list=LL&index=1&t=21s"
+                            class="glightbox play-btn mb-4"></a>
                     </div>
 
                     <div class="col-lg-6 pt-3 pt-lg-0 content">
@@ -247,7 +251,7 @@
 
                 <div class="row content">
                     <div class="col-md-5" data-aos="fade-right">
-                        <img src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\work-process-12.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-12.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-4" data-aos="fade-left">
@@ -257,13 +261,17 @@
                             nuestro trabajo.
                         </p>
                         <ul>
-                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                              </svg> Apuntamos nombre, apellidos y el lugar de donde proviene la
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                                </svg> Apuntamos nombre, apellidos y el lugar de donde proviene la
                                 donación.</li>
-                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                              </svg> Siempre mantenemos segura la información que nos acaban de
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                                </svg> Siempre mantenemos segura la información que nos acaban de
                                 confiar nuestros
                                 nuevos compañeros. </li>
                         </ul>
@@ -272,7 +280,7 @@
 
                 <div class="row content">
                     <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-                        <img src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\work-process-22.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-22.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -292,7 +300,7 @@
 
                 <div class="row content">
                     <div class="col-md-5" data-aos="fade-right">
-                        <img src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\work-process-32.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-32.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5" data-aos="fade-left">
@@ -302,16 +310,22 @@
                             mejor
                             en que podemos llegar a equivocarnos y como podemos mejorarlo.</p>
                         <ul>
-                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                              </svg> Elaboramos un diagrama con todas las donaciones y gastos que
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                                </svg> Elaboramos un diagrama con todas las donaciones y gastos que
                                 tenemos. </li>
-                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                              </svg> Averiguamos que necesita mas atención pública.</li>
-                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                              </svg> Regulamos la cantidad de gastos que tenemos para poder
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                                </svg> Averiguamos que necesita mas atención pública.</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                                </svg> Regulamos la cantidad de gastos que tenemos para poder
                                 seguir ayudando
                                 de la forma mas economica posible.</li>
                         </ul>
@@ -320,7 +334,7 @@
 
                 <div class="row content">
                     <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-                        <img src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\work-process-42.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-42.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -360,35 +374,35 @@
                 <div class="clients-slider swiper-container">
                     <div class="swiper-wrapper align-items-center">
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-12.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-12.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-22.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-22.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-32.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-32.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-42.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-42.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-52.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-52.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-62.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-62.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-72.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-72.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\client-82.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-82.png"
                                 class="img-fluid" alt="">
                         </div>
                     </div>
@@ -425,8 +439,8 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h4>Contacta con nosotros</h4>
                         <p>
-                            Passeig de Devesa,<br>
-                            34, 17001 Girona<br>
+                            Passeig de la Devesa, 34 <br>
+                            Girona, 17001<br>
                             España <br>
                             <strong>Telefono:</strong> +34 972 555 555<br>
                             <strong>Email:</strong> SphenAuk@gmail.com<br>
@@ -470,11 +484,11 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>SphenAuk</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>SphenAuk</span></strong>. Todos los derechos reservados
             </div>
             <div class="credits">
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/serenity-bootstrap-corporate-template/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Diseñado por <a href="https://bootstrapmade.com/">SphenAuk</a>
             </div>
         </div>
     </footer><!-- End Footer -->
