--- a/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
+++ b/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
@@ -51,16 +51,16 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li class="dropdown"><a href="#"><span>About</span> <svg xmlns="http://www.w3.org/2000/svg"
+                    <li><a href="index.html">Inicio</a></li>
+                    <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <svg xmlns="http://www.w3.org/2000/svg"
                                 width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short"
                                 viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
                                     d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z" />
                             </svg></a>
                         <ul>
-                            <li><a class="active" href="about.html">About</a></li>
-                            <li><a href="team.html">Team</a></li>
+                            <li><a class="active" href="about.html">Sobre Nosotros</a></li>
+                            <li><a href="team.html">Equipo</a></li>
                             <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
                                         class="bi bi-chevron-right"></i></a>
                                 <ul>
@@ -73,13 +73,12 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="adoptaunpingu.html">Adopta un pingüino</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
 
-                    <li><a class="getstarted" href="about.html">Get Started</a></li>
+                    <li><a class="getstarted" href="about.html">Hazte socio</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
