--- a/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
+++ b/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
@@ -61,15 +61,6 @@
                         <ul>
                             <li><a class="active" href="about.html">Sobre Nosotros</a></li>
                             <li><a href="team.html">Equipo</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
-                                        class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
                             </li>
                         </ul>
                     </li>
@@ -193,7 +184,7 @@
                     <div class="col-lg-6 pt-3 pt-lg-0 content">
                         <h3>De donde venimos?</h3>
                         <p class="fst-italic">
-                            Esta ONG aparece en otoño de 2011, donde cuatro emprenedores deciden despues de un largo
+                            Esta ONG aparece en otoño de 2011, donde seis emprenedores deciden despues de un largo
                             viaje a la
                             antartida, ayudar a una de las especies que menos se tomala sociedad en serio.
                         </p>
