--- a/blog-single.html
+++ b/blog-single.html
@@ -86,7 +86,7 @@
       <div class="breadcrumb-hero">
         <div class="container">
           <div class="breadcrumb-hero">
-            <h2>Blog</h2>
+            <h2>Conoce las demas ONG's</h2>
             <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
           </div>
         </div>
