--- a/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
+++ b/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
@@ -412,9 +412,7 @@
 
                     <div class="col-lg-3 col-md-6 footer-info">
                         <h3>SphenAuk</h3>
-                        <p>En esta empresa respetamos las dudas de aquellos que quieran formar parte
-                            de nuestro trabajo en ayudar a los pingüinos que estan en peligro
-                            de extinción y darles la vida que se merecen.</p>
+                        <p>En esta empresa contestamos con respeto y sinceridad a cualquier duda que usted tenga.</p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
