--- a/pricing.html
+++ b/pricing.html
@@ -103,8 +103,6 @@
                 <li>Alimentamos</li>
                 <li>Damos hogar</li>
                 <li>Rescatamos</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
@@ -115,13 +113,9 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
               <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h4><sup>€</sup>25<span> / mes</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Todo lo del plan anterior</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
