--- a/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
+++ b/TRABAJO FINAL/SOBRENOSOTROS/sobrenosotros.html
@@ -93,7 +93,7 @@
             </div>
             <div class="container">
                 <ol>
-                    <li><a href="index.html">Incio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li>Sobre nosotros</li>
                 </ol>
             </div>
