--- a/team.html
+++ b/team.html
@@ -132,7 +132,7 @@
               <div class="member-info">
                 <h4>kim jong un</h4>
                 <span>Dictador por pasión</span>
-                <p>Kim asume oficialmente la Comandancia Suprema del Ejército Popular de Corea del Norte, después del funeral estatal de su padre acaecido el 28 de diciembre de 2011, tambien es amante de los pingüinos</p>
+                <p>Kim asume oficialmente la Comandancia Suprema del Ejército Popular de Corea del Norte, después del funeral estatal de su padre acaecido el 28 de diciembre de 2011, tiene un par de pingüinos a los que quiere mas que a su familia</p>
               </div>
             </div>
           </div>
@@ -151,7 +151,7 @@
               <div class="member-info">
                 <h4>Bill Gates</h4>
                 <span>Millonario</span>
-                <p>William Henry Gates III (Seattle, Washington; 28 de octubre de 1955), mejor conocido como Bill Gates (AFI: [bil gejts]), es un empresario, informático y filántropo estadounidense, conocido por haber creado y fundado junto con Paul Allen, la empresa Microsoft. De igual forma es conocido por su gran fetiche hacia los pingüinos</p>
+                <p>William Henry Gates III (Seattle, Washington; 28 de octubre de 1955), mejor conocido como Bill Gates (AFI: [bil gejts]), es un empresario, informático y filántropo estadounidense, conocido por haber creado y fundado junto con Paul Allen, la empresa Microsoft. De igual forma es conocido por su pequeño fetiche con los pingüinos, ja que cree que son muy manipulables.</p>
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
               <div class="member-info">
                 <h4>Lebron James</h4>
                 <span>Futbolista</span>
-                <p>LeBron Raymone James Sr. (Akron, Ohio, 30 de diciembre de 1984) es un jugador de baloncesto estadounidense que actualmente pertenece a la plantilla de Los Angeles Lakers de la NBA. Con 2,06 metros de estatura, su posición es la de alero, pero su talento, versatilidad y poderío físico le permiten jugar tanto de base como de ala-pívot.1​ James es considerado como uno de los mejores jugadores de baloncesto del mundo y de la historia y gran amante de los pingüinos</p>
+                <p>LeBron Raymone James Sr. (Akron, Ohio, 30 de diciembre de 1984) es un jugador de futbol estadounidense que actualmente pertenece a la plantilla de Los Angeles Lakers de la NBA. Con 2,06 metros de estatura, su posición es la de delantero, pero su talento, versatilidad y poderío físico le permiten jugar tanto de centrocampista como de defensa. James es considerado como uno de los mejores jugadores de futbol del mundo y de la historia y tambien coonocido por ser un gran amante de los pingüinos</p>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
               </div>
               <div class="member-info">
                 <h4>Kim kardashian</h4>
-                <span>Es mujer</span>
+                <span>Empresaria</span>
                 <p>Kimberly Noel Kardashian West (Los Ángeles, 21 de octubre de 1980), conocida como Kim Kardashian, es una socialité, modelo, empresaria y personaje público estadounidense. Su plato favorito son los pingüinos</p>
               </div>
             </div>
@@ -207,7 +207,7 @@
               </div>
               <div class="member-info">
                 <h4>Chayanne</h4>
-                <span>Es tu padre</span>
+                <span>Musico/podria ser tu padre</span>
                 <p>Elmer Figueroa Arce (Río Piedras, Puerto Rico; 28 de junio de 1968), conocido como Chayanne, es un cantante, compositor, bailarín y actor puertorriqueño. Ha vendido más de 50 millones de álbumes en todo el mundo. Gran parte de sus canciones han sido dedicada a los pingüinos</p>
               </div>
             </div>
@@ -227,7 +227,7 @@
               <div class="member-info">
                 <h4>Donal Trump</h4>
                 <span>Expersonaje</span>
-                <p>Donald John Trump (pronunciación en inglés: /ˈdɒnəld d͡ʒɒn trʌmp/ ( escuchar); Nueva York, 14 de junio de 1946) es un empresario, director ejecutivo, inversor en bienes raíces, personalidad televisiva y político estadounidense que ejerció como el 45.º presidente de los Estados Unidos de América desde el 20 de enero de 2017. Ahora que no es presidente dsifruta debatiendo con pingüinos, para el son igual que as personas.</p>
+                <p>Donald John Trump (pronunciación en inglés: /ˈdɒnəld d͡ʒɒn trʌmp/ ( escuchar); Nueva York, 14 de junio de 1946) es un empresario, director ejecutivo, inversor en bienes raíces, personalidad televisiva y político estadounidense que ejerció como el 45.º presidente de los Estados Unidos de América desde el 20 de enero de 2017. Ahora que no es presidente dsifruta debatiendo con pingüinos, ja que para el razonan igual que las personas.</p>
               </div>
             </div>
           </div>
